# ocula-pivic-firmware

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  memmap_xram_rp2350.ld
src/boards/: ocula-pivic.h
src/firmware/: main.c  main.h
src/firmware/mon/: hlp.c  mon.c  ram.c  set.c
src/firmware/oric/: aud.c  aud.h  oric_font.h  rst.c  rst.h  ula.c  ula.h  ula.pio  ula_dvi.c  ula_dvi.h
src/firmware/sys/: cfg.c  cfg.h  clk.c  clk.h  com.c  cpu.c  dvi.c  dvi.h  dvi_audio.c  dvi_audio.h  edid.c  edid.h  lfs.c  lfs.h  mem.c  mem.h  rev.c  rev.h  sys.c  tst.c  tst.h  vga.c
src/firmware/usb/: cdc.c  descriptors.c
src/firmware/vic/: api.c  api.h  aud.c  aud.h  aud_splash.h  char_rom.h  cvbs.c  cvbs.h  cvbs.pio  cvbs_ntsc.h  cvbs_pal.h  mem.c  mem.h  mem.pio  pen.c  pen.h  pot.c  pot.h  vic.c  vic.h  vic.pio  vic_dvi.c  vic_dvi.h  vic_ntsc.c  vic_ntsc.h  vic_pal.c  vic_pal.h  vic_pal_new.c
src/ocula/: main.c  main.h  str.c
src/ocula/sys/: cfg.c  cpu.h  dvi.c  lfs.c  mem.h  std.h  sys.c
src/ocula/usb/: cdc.c  cdc.h
src/ocula/vic/: cvbs.h
src/ria/: main.h
